[FIX] sap.ui.core.layout.VerticalLayout: fix vertical-align in IE
BCP: 1580197076
CR-Id: 012003146900004769072015

--- a/src/sap.ui.layout/src/sap/ui/layout/themes/base/VerticalLayout.less
+++ b/src/sap.ui.layout/src/sap/ui/layout/themes/base/VerticalLayout.less
@@ -8,5 +8,9 @@
 	vertical-align: top;
 }
 
+html[data-sap-ui-browser^="ie"] .sapUiVlt {
+	vertical-align: baseline;
+}
+
 /* mixin call for creating container content padding classes (arguments: rootContainer, contentSelector) */
 .sapUiContainerContentPadding(~".sapUiVlt");
